--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Feb 23 16:10:49 CET 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/de.po: updated
+  * po/fr.po: updated
+
 Fri Feb 23 15:54:00 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * utils/start-stop-daemon.c: Add OpenBSD support
