debian/changelog: merged additions from v1.8 branch scripts/controllib.pl: + no need to have Origin in capit + consistently use &warn + fix -s to export all variables instead of just the first scripts/dpkg-genchanges.pl: do not complain about missing packages if doing a source-only build scripts/dpkg-buildpackage.sh: + correct filename for secret keyring in gpg test + fix -C + skip signing pause of building unsigned packages + improve srcmsg + test for invalid signinterface

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+Sun Feb 25 19:17:53 CET 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/changelog: merged additions from v1.8 branch
+  * scripts/controllib.pl: 
+    + no need to have Origin in capit
+    + consistently use &warn
+    + fix -s to export all variables instead of just the first
+  * scripts/dpkg-genchanges.pl: do not complain about missing packages
+    if doing a source-only build
+  * scripts/dpkg-buildpackage.sh: 
+    + correct filename for secret keyring in gpg test
+    + fix -C
+    + skip signing pause of building unsigned packages
+    + improve srcmsg
+    + test for invalid signinterface
+  
 Sun Feb 25 19:10:33 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * doc/fr/dpkg.8, doc-fr/install-info.8, doc-fr/update-alternatives.8, 
