* ChangeLog: undo file corruption (ugh) * utils/start-stop-daemon.8: fix typo * configure.in: use AC_C_INLINE instead of our own test * lib/nfmalloc, include/dpkg-db.h: remove HAVE_INLINE tests, use extern inline directly * lib/varbuf.c: add inline keyowrd to varbufaddc * optlib/Makefile.in: undo earlier patch and build libopt.a again * lib/Makefile.in: use libopt.a again, and a rule to build it * Makefile.in: build optlib before lib * Makefile.conf.in: add RANLIB * dselect/method.h, dselect/methlist.cc, dselect/method.cc,   dselect/methparse.cc: rename struct option to dselect_option to prevent   conflict with getopt.h * main/help.c: rework do_script a bit to compile without errors * scripts/dpkg-gencontrol.1: add -n option to specify filename * scripts/dpkg-source.1:   + document -n option for dpkg-gencontrol   + fix confusing wording for dpkg-buildpackage -uc option   + fix layout error for dpkg-distaddfile section   + it's DEADJOE, not DEAD_JOEY * scripts/dpkg-architecture.pl:   + apply cleanup patch from Julian Gilbey   + modify gcc regexp to recognize gcc versions like 2.96-ia64-000717 * scripts/dpkg-checkbuilddeps.pl, scripts/dpkg-checkbuilddeps.1: new   script from Joey Hess to check build dependencies * THANKS: Add Joey Hess * scripts/dpkg-parsechangelog.pl:   + support reading changelog from stdin   + remove Linux reference * scripts/dpkg-statoverride.pl: exit with exitcode 1 if we do --list but   don't output anything, and use exitcode 2 if we try to remove a   non-exiting override (unless --force is given). * scripts/dpkg-statoverride.8: document new exitcode for --list * main/main.c, main/dpkg.8: remove --smallmem and --largemem references * scripts/dpkg-buildpackage.sh:   + don't bother to specify architecture settings on commandlines since     we put them in the environment already   + remove debsign support, it's useless and debsign can't handle it   + use DEB_BUILD_ARCH to get build architecture, not DEB_HOST_ARCH   + remove Linux reference * script

--- a/THANKS
+++ b/THANKS
@@ -26,6 +26,7 @@ J.H.M. Dassen <jdassen@cistron.nl>
 Jim Pick <jim@jimpick.com>
 Jim Van Zandt <jrv@vanzandt.mv.com>
 Joel Klecker <jk@espy.org>
+Joey Hess <joeyh@debian.org>
 Josip Rodin <jrodin@jagor.srce.hr>
 Juan Cespedes <cespedes@debian.org>
 Juergen Menden <menden@morgana.camelot.de>
