--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -408,10 +408,6 @@ Try to (de)install things even when not root.
 Ignore dependency-checking for specified packages (actually, checking is
 performed, but only warnings about conflicts are given, nothing else).
 .TP
-\fB--largemem\fP | \fB--smallmem\fP
-Tells \fBdpkg\fP whether to preserve memory (e.g. with less than 24 MB
-of RAM) or consume as much as needed(the default).
-.TP
 \fB--new\fP | \fB--old\fP
 Select new or old binary package format. This is a \fBdpkg-deb\fP(1)
 option.
@@ -496,7 +492,7 @@ for more information about them:
 .TP
 .B DPKG_NO_TSTP
 Define this to something if you prefer \fBdpkg\fP starting a new
-shell rather than suspending \fBdpkg\fP, while doing a shell escape.
+shell rather than suspending itself, while doing a shell escape.
 .TP
 .B SHELL
 The program \fBdpkg\fP will execute while starting a new shell.
