--- a/scripts/install-info.8
+++ b/scripts/install-info.8
@@ -3,7 +3,7 @@
 .\"
 .\" This is free software; see the GNU General Public Licence version 2
 .\" or later for copying conditions.  There is NO warranty.
-.TH INSTALL-INFO 8 "29th November 1995" "Debian Project" "Debian GNU/Linux"
+.TH INSTALL-INFO 8 "29th November 1995" "Debian Project" "dpkg utilities"
 .SH NAME
 install\-info \- create or update entry in Info directory
 .SH SYNOPSIS
