--- a/utils/start-stop-daemon.8
+++ b/utils/start-stop-daemon.8
@@ -161,7 +161,7 @@ and place the pid into it just before executing the process. Note, it will
 not be removed when stopping the program.
 .B NOTE:
 This feature may not work in all cases. Most notably when the program
-being executed forks from it's main process. Because of this it is usually
+being executed forks from its main process. Because of this it is usually
 only useful when combined with the
 .B --background
 option.
