--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -540,7 +540,7 @@ with:
 \fB     dpkg --set-selections <myselections\fP
 .br
 Note that this will not actually install or remove anything, but just
-set tghe selection state on the requested packages.  You will need some
+set the selection state on the requested packages.  You will need some
 other application to actually download and install the requested
 packages.
 
