--- a/utils/start-stop-daemon.8
+++ b/utils/start-stop-daemon.8
@@ -120,7 +120,7 @@ specify a group by appending a
 then the group or gid in the same way
 as you would for the `chown' command (\fIuser\fP\fB:\fP\fIgroup\fP).
 When using this option
-you must realize that the primary and suplimental groups are set as well,
+you must realize that the primary and supplemental groups are set as well,
 even if the
 .B --group
 option is not specified.  The
@@ -148,7 +148,7 @@ reason. This is a last resort, and is only meant for programs that either
 make no sense forking on their own, or where it's not feasible to add the
 code for it to do this itself.
 .TP
--BR -N | --nicelevel
+.BR -N | --nicelevel
 This alters the prority of the process before starting it.
 .TP
 .BR -m | --make-pidfile
@@ -166,13 +166,13 @@ only useful when combined with the
 .B --background
 option.
 .TP
-.BR -v|--verbose
+.BR -v | --verbose
 Print verbose informational messages.
 .TP
-.BR -H|--help
+.BR -H | --help
 Print help information; then exit.
 .TP
-.BR -V|--version
+.BR -V | --version
 Print version information; then exit.
 
 .SH AUTHORS
