Updated Swedish translation.

--- a/doc/sv/822-date.1
+++ b/doc/sv/822-date.1
@@ -1,7 +1,7 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Authors: Ian Jackson
-.\" Translation of CVS revision 1.1
-.TH 822\-DATE 1 "14 augusti 1996" "Debianprojektet" "Debian GNU/Linux-manualen"
+.\" Translation of CVS revision 1.2
+.TH 822\-DATE 1 "14 augusti 1996" "Debianprojektet" "dpkg-verktyg"
 .SH NAMN
 822\-date \- Skriv datum och tid i RFC822-format
 .SH SYNOPS
