--- a/doc/sv/start-stop-daemon.8
+++ b/doc/sv/start-stop-daemon.8
@@ -1,32 +1,30 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
-.\" Translation of CVS revision 1.6
+.\" Translation of CVS revision 1.10
 .TH START\-STOP\-DAEMON 8 "15 mars 1997" "Debianprojektet" "Debian GNU/Linux"
 .SH NAMN
 start\-stop\-daemon \- startar och stoppar bakgrundsprocesser
 .SH SYNOPS
 .B start-stop-daemon
-.BR -S|--start
-.IR "flaggor ... -- parametrar ..."
+.BR -S | --start
+.IR flaggor
+.RB [ \-\- ]
+.IR parametrar
 .HP
 .B start-stop-daemon
-.BR -K|--stop
-.IR "flaggor ..."
+.BR -K | --stop
+.IR flaggor
 .HP
 .B start-stop-daemon
-.BR -H|--help
+.BR -H | --help
 .HP
 .B start-stop-daemon
-.BR -V|--version
+.BR -V | --version
 .SH BESKRIVNING
 .B start\-stop\-daemon
 används för att kontrollera skapande och avslutande av processer på
 systemnivå.
 Med hjälp av flaggorna
-.BR --exec ,
-.BR --pidfile ,
-.BR --user,
-and
-.BR --name
+.BR --exec ", " --pidfile ", " --user " och " --name
 kan
 .B start\-stop\-daemon
 ställas in att hitta existerande instanser av en körande process.
@@ -67,35 +65,35 @@ anges).
 .SH FLAGGOR
 
 .TP
-.I -x|--exec programfil
+\fB-x\fP|\fB--exec\fP \fIprogramfil\fP
 Sök efter processer som är instanser av denna programfil (enligt
 .BI /proc/ pid /exe 
 ).
 .TP
-.I -p|--pidfile pidfil
+\fB-p\fP|\fB--pidfile\fP \fIpidfil\fP
 Sök efter processer vars process-id anges i
 .IR pidfil .
 .TP
-.I -u|--user användarnamn|användar-id
+\fB-u\fP|\fB--user\fP \fIanvändarnamn\fP|\fIanvändar-id\fP
 Sök efter processer som ägs av den användare som anges med
 .I användarnamn 
 eller
 .IR användar-id .
 .TP
-.I -n|--name processnamn
+\fB-n\fP|\fB--name\fP \fIprocessnamn\fP
 Sök efter processer med namnet
 .I processnamn
 (enligt
 .BI /proc/ pid /stat 
 ).
 .TP
-.I -s|--signal signal
+\fB-s\fP|\fB--signal\fP \fIsignal\fP
 Tillsammans med
 .B --stop
 anger detta den signal som skall sändas till processen som stoppas (förval
 är 15).
 .TP
-.I -a|--startas sökväg
+\fB-a\fP|\fB--startas\fP \fIsökväg\fP
 Tillsammans med
 .B --start
 anger detta att processen som anges med
@@ -104,42 +102,46 @@ skall startas.
 Om den inte anges används parametern som gavs till
 .BR --exec .
 .TP
-.I -t|--test
+.BR -t | --test
 Skriver ut vad som skulle ha utförts och sätter returvärdet, men utför
 ingenting.
 .TP
-.I -o|--oknodo
+.BR -o | --oknodo
 Returnerar felstatus 0 i stället för 1 om ingen åtgärd utförs/skulle
 utförts.
 .TP
-.I -q|--quiet
+.BR -q | --quiet
 Skriv inte informationsmeddelanden; visa endast felmeddelanden.
 .TP
-.I -c|--chuid
+\fB-c\fP|\fB--chuid\fP \fIanvändarnamn\fR|\fIanvändar-id\fP
 Byt till detta användarnamn/användar-id innan processen startas.
-Du kan även ange en grupp genom att lägga till ett kolontecken (":") följt
-av gruppnamnet eller grupp-id på samma sätt som du skull gjort till
-"chown"-kommandot (användare:grupp).
+Du kan även ange en grupp genom att lägga till ett kolontecken,
+.BR : ,
+följt av gruppnamnet eller grupp-id på samma sätt som du skull gjort till
+"chown"-kommandot
+(\fIanvändarefP\fB:\fP\fIgrupp\fP).
 När du använder detta alternativ måste du ha i åtanke att även både primär
-och tilläggs-grupp sätts, även om "grupp"-valet inte anges.
-Gruppvalet är bara till för grupper som användaren normalt inte är en medlem
+och tilläggs-grupp sätts, även om
+.BR --group -flaggan
+inte anges.
+.BR --group -flaggan
+är bara till för grupper som användaren normalt inte är en medlem
 i (t.ex för att lägga till gruppmedlemskap för enskilda processer för
 standardanvändare såsom "nobody").
 .TP
-.I -r|--chroot rot
+\fB-r\fP|\fB--chroot\fP \fIrot\fP
 Byt katalog och rot till
 .B rot
 innan processen startas.
 Observera att även pidfilen skrivs efter chroot har utförts.
 .TP
-.I -b|--background
+.BR -b | --background
 Används typiskt med program som inte kopplar loss sig av sig själva.
 Denna flagga kommer tvinga
 .B start-stop-daemon
 att förgrena sig (fork) innan processen startar, och tvinga den grenen
 att köra i bakgrunden.
-.B VARNING:
-start-stop-daemon
+.B VARNING: start-stop-daemon
 kan inte kontrollera felstatus för processer som av
 .B någon som helst
 anledning misslyckas med att exekvera.
@@ -147,7 +149,10 @@ Detta är en sista utväg, och är endast avsett för program som det normalt
 sett inte är någon idé att på egen hand förgrena, eller där det inte är
 möjligt att lägga till koden för detta på egen hand.
 .TP
-.I -m|--make-pidfile
+.BR -N | --nicelevel
+Detta ändrar prioriteten på processen innan den startas.
+.TP
+.BR -m | --make-pidfile
 Används när ett program startas som inte skapar sin egen pidfil.
 Denna flagga kommer att göra så att
 .B start-stop-daemon
@@ -161,21 +166,19 @@ när programmet som startas förgrenar sig (fork) från sin huvudprocess, och
 den är därför bara användbar i samband med flaggan
 .BR --background .
 .TP
-.I -v|--verbose
+.BR -v | --verbose
 Skriv ut pratsamma informationsmeddelanden.
 .TP
-.I -H|--help
+.BR -H | --help
 Skriv ut hjälpinformation och avsluta sedan.
 .TP
-.I -V|--version
+.BR -V | --version
 Skriv ut versionsinformation och avsluta sedan.
 
 .SH FÖRFATTARE
-Ian Jackson <ijackson@gnu.ai.mit.edu>
+Marek Michalkiewicz <marekm@i17linuxb.ists.pwr.wroc.pl>, baserat på en
+tidigare version av Ian Jackson <ian@chiark.greenend.org.uk>.
 
-Marek Michalkiewicz <marekm@i17linuxb.ists.pwr.wroc.pl>
-
-Manualsida av Klee Dienes <klee@mit.edu>.
-
-Manualsida översatt av Peter Karlsson <peterk@debian.org>.
+Manualsida av Klee Dienes <klee@mit.edu>, delvis omformaterad av
+Ian Jackson, översatt av Peter Karlsson <peterk@debian.org>.
 
