--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Mar 04 21:37:34 CET 2001 peter karlsson <peterk@debian.org>
+
+  * po/sv.po, doc/sv/dpkg.8, doc/sv/822-date.1, doc/sv/start-stop-daemon.8:
+    Updated Swedish translation.
+  * main/dpkg.8, utils/start-stop-daemon.8: Fixed typos.
+
 Fri Mar  2 17:29:02 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * The Copenhagen Commit
