--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar  5 14:03:49 CET 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * configure.in: add more warning flags for gcc
+
 Sun Mar 04 21:37:34 CET 2001 peter karlsson <peterk@debian.org>
 
   * po/sv.po, doc/sv/dpkg.8, doc/sv/822-date.1, doc/sv/start-stop-daemon.8:
@@ -26,7 +30,7 @@ Fri Mar  2 17:29:02 CET 2001 Wichert Akkerman <wakkerma@debian.org>
     + document -n option for dpkg-gencontrol
     + fix confusing wording for dpkg-buildpackage -uc option
     + fix layout error for dpkg-distaddfile section
-    + it's DEADJOE, not DEAD_JOEY
+    + it's DEADJOE, not DEAD_JOE
   * scripts/dpkg-architecture.pl:
     + apply cleanup patch from Julian Gilbey
     + modify gcc regexp to recognize gcc versions like 2.96-ia64-000717
