French translation update

--- a/doc/fr/install-info.8
+++ b/doc/fr/install-info.8
@@ -3,7 +3,8 @@
 .\"
 .\" This is free software; see the GNU General Public Licence version 2
 .\" or later for copying conditions.  There is NO warranty.
-.TH INSTALL-INFO 8 "29th November 1995" "Debian Project" "Debian GNU/Linux"
+.\" traduction de la version cvs 1.2
+.TH INSTALL-INFO 8 "29th November 1995" "Projet Debian " "Utilitaires de dpkg"
 .SH NOM
 install\-info \- création ou mise à jour d'une entrée dans le répertoire Info
 .SH SYNOPSIS
