--- a/doc/fr/update-rc.d.8
+++ b/doc/fr/update-rc.d.8
@@ -1,18 +1,18 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Authors: Ian Jackson
-.\" Traduction de la révision CVS 1.3
-.TH UPDATE\-RC.D 8 "2 March 1998" "Debian Project" "Debian/GNU Linux"
+.\" Traduction de la révision CVS 1.4
+.TH UPDATE\-RC.D 8 "2 March 1998" "Projet Debian " "Utilitaires de dpkg"
 .SH NOM
 update\-rc.d \- Pour installer ou supprimer les liens vers les scripts d'
 initialisation de type System-V 
 .SH SYNOPSIS
 .B update\-rc.d
 .RI [ -n ]
+.RI [ -f ]
 .IB nom " remove"
 .HP
 .B update-rc.d
 .RI [ -n ]
-.RI [ -f ]
 .IB nom " defaults"
 .RI [ NN " | " NN-start " " NN-stop ]
 .HP
@@ -181,9 +181,8 @@ et gérés par
 .TP
 .B /etc/init.d/skeleton
 Modèle pour l'écriture des scripts de
-.B init.d
-scripts.
-.SH VOYEZ AUSSI
+.B init.d.
+.SH VOIR AUSSI
 .IR "dpkg programmers manual" ,
 .br
 .BR /etc/init.d/skeleton ,
