add debsig-verify support

--- a/debian/changelog
+++ b/debian/changelog
@@ -54,6 +54,7 @@ dpkg (1.9.0) unstable; urgency=low
   * Fix formatting error in dpkg-source.1. Closes: Bug#82723
   * Change dpkg-gencontrol to fix comma-related syntax errors after
     processing substvars
+  * Very package signatures if debsig-verify is installed
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
