--- a/po/fr.po
+++ b/po/fr.po
@@ -2441,7 +2441,6 @@ msgstr ""
 "récente que celle installée\n"
 "  -B|--auto-deconfigure      Installe même si cela entraîne la rupture "
 "d'autres paquets\n"
-"  --largemem | --smallmem    Optimise pour l'utilisation avec une RAM "
 "conséquente (>4Mb) ou réduite (<4Mb)\n"
 "  --no-act                   Seulement exprimer ce que l'on voudrait faire "
 "sans rien faire\n"
@@ -2992,8 +2991,7 @@ msgstr ""
 #, c-format
 msgid ""
 "dpkg - warning: ignoring request to remove %.250s which isn't installed.\n"
-msgstr ""
-"dpkg - avertissement: requête pour supprimer %.250s qui n'a pas été installé "
+msgstr "dpkg - Requête ignoreé : suppression de %.250s, qui n'est pas installé.\n"
 "ignorée.\n"
 
 #: main/remove.c:86
