Updated Swedish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 11 19:24:58 CET 2001 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated Swedish translation.
+
 Sat Mar 10 15:59:39 CST 2001 Adam Heath <doogie@debian.org>
 
   * main/filesdb.c: Use a pure file descriptor, instead of a stream, to
