Handle window resize in dselect main menu

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,7 @@ dpkg (1.9.0) unstable; urgency=low
   * Change dpkg-gencontrol to fix comma-related syntax errors after
     processing substvars
   * Very package signatures if debsig-verify is installed
+  * Handle window resize in dselect main menu. Closes: Bug#93559
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
