--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr 12 13:12:16 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/it.po: installed new version from Lele Gaifax
+  * dselect/main.cc: translate menu option as well in dme()
+
 Wed Apr 11 12:19:25 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect.main.cc: retry getch if it fails with EINTR
