--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Apr 18 13:15:08 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * configure.in, debian/control: New upstream gettext.  Since we had
+    to change our build, to comply with the new upstream, we also
+    need to modify the build-depends.
+  * po/dpkg.pot, po/nl.po: Fixed broken translations.
+
 Wed Apr 18 18:01:21 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/install-info.{8,pl}: modify install-info to take relative
