In blankpackage, intialize ->installed and ->available.   Found by me and Fumitoshi UKAI <ukai@debian.or.jp>.  This should help several segfaults that people have been seeing in dpkg.

--- a/debian/changelog
+++ b/debian/changelog
@@ -56,6 +56,8 @@ dpkg (1.9.0) unstable; urgency=low
     processing substvars
   * Very package signatures if debsig-verify is installed
   * Handle window resize in dselect main menu. Closes: Bug#93559
+  * Initialize all parts of the package record.  This should fix several
+    segfaults people have been seeing in dpkg.  Closes: #90328.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
