Errors during dpkg -s(and other similiar commands) are now printed on stderr.

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,8 @@ dpkg (1.9.0) unstable; urgency=low
     segfaults people have been seeing in dpkg.  Closes: #90328.
   * Apply patch from bug#86847, that escapes intl chars in filenames.
     Closes(rc): #83752, #85040, #86847, #89000.
+  * Errors during dpkg -s(and other similiar commands) are now printed
+    on stderr.  Closes: #88987.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
