Add --retry option to start-stop-daemon

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr 19 13:36:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * utils/install-info.{c,8}: merge patch from Ian Jackson to add a
+    --retry option to start-stop-daemon
+
 Thu Apr 19 00:14:39 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/enquiry.c: Errors during dpkg -s(and other similiar commands) are
