--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ dpkg (1.9.0) unstable; urgency=low
     a warning if used. Closes: Bug#84905
   * Update German translation, Closes: Bug#80529,#87581
   * Update French translation, Closes: Bug#65284,#87238
+  * Update Japanese translation, Closes: Bug#93873
   * Add French manpages, courtesy of Philippe Batailler
   * Ingore vim swapfiles in dpkg-source, Closes: Bug#81630
   * remove --import option from dpkg-statoverride, Closes: Bug#81358
@@ -63,6 +64,8 @@ dpkg (1.9.0) unstable; urgency=low
   * Errors during dpkg -s(and other similiar commands) are now printed
     on stderr.  Closes: #88987.
   * Add a --retry option to start-stop-daemon. Closes: Bug#75139
+  * Fix regeps to extract Closes magic from a changelog so the #
+    is really optional. Closes: Bug#94474
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
