--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr 19 15:18:05 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/cl-debian.pl: make regexps for Closes consistent again
+
 Thu Apr 19 13:36:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * utils/install-info.{c,8}: merge patch from Ian Jackson to add a
