* po/fr.po: Fix typo. * debian/changelog: Close additional bugs, from other already commited   patches.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,8 @@ dpkg (1.9.0) unstable; urgency=low
     use about the same amount of memory, and largemem is faster.  Both
     --largemem and --smallmem are now obselete options, and will print
     a warning if used. Closes: Bug#84905
-  * Update German translation, Closes: Bug#80529,#87581
-  * Update French translation, Closes: Bug#65284,#87238
+  * Update German translation, Closes: Bug#80529,#80532,#87581
+  * Update French translation, Closes: Bug#65284,#85035,#87238
   * Update Japanese translation, Closes: Bug#93873
   * Add French manpages, courtesy of Philippe Batailler
   * Ingore vim swapfiles in dpkg-source, Closes: Bug#81630
@@ -14,14 +14,16 @@ dpkg (1.9.0) unstable; urgency=low
   * Replace nfmalloc implementation with obstack. Added obstack.[ch] to
     optlib, for non-GNU systems.
   * dpkg-divert only allows absolute filenames now. Closes: Bug#82419
-  * Handle diffs from non-existing files to existing files. Closes: Bug#82708
+  * Handle diffs from non-existing files to existing files. Closes: Bug#82708,
+    #90982.
   * Small fixes to the buildsystem. Closes: Bug#84361
   * Fix dpkg-statoverride --update for things other then plain files.
     Closes: Bug#84449
   * Fix race with source directory disappearing in dpkg-source.
     Closes: Bug#82797
-  * Fix manpage for dpkg-gencontrol. Fies: Bug#84625
-  * Use POSIX glob instead of regexp in debian/rules. Closes: Bug#84582
+  * Fix manpage for dpkg-gencontrol. Closes: Bug#84625
+  * Use POSIX glob instead of regexp in debian/rules. Closes: Bug#83042,
+    #84582
   * fix typo in usage message for dpkg-divert, Closes: Bug#85977
   * Use full path for argv[0] when calling scripts. Closes: Bug#68783
   * Add ia64 support to dpkg-architecture.
@@ -55,14 +57,14 @@ dpkg (1.9.0) unstable; urgency=low
   * Fix formatting error in dpkg-source.1. Closes: Bug#82723
   * Change dpkg-gencontrol to fix comma-related syntax errors after
     processing substvars
-  * Very package signatures if debsig-verify is installed
+  * Verify package signatures if debsig-verify is installed
   * Handle window resize in dselect main menu. Closes: Bug#93559
   * Initialize all parts of the package record.  This should fix several
-    segfaults people have been seeing in dpkg.  Closes: #90328.
+    segfaults people have been seeing in dpkg.  Closes: Bug#90328.
   * Apply patch from bug#86847, that escapes intl chars in filenames.
-    Closes(rc): #83752, #85040, #86847, #89000.
+    Closes: Bug#83752, #85040, #86847, #89000.
   * Errors during dpkg -s(and other similiar commands) are now printed
-    on stderr.  Closes: #88987.
+    on stderr.  Closes: Bug#88987.
   * Add a --retry option to start-stop-daemon. Closes: Bug#75139
   * Fix regeps to extract Closes magic from a changelog so the #
     is really optional. Closes: Bug#94474
