--- a/po/fr.po
+++ b/po/fr.po
@@ -2273,7 +2273,7 @@ msgstr "impossible d'analyser %s `%.250s'"
 
 #: main/help.c:377
 msgid "dpkg: ... it looks like that went OK.\n"
-msgstr "dpkg: ... on dirait que tout a fonctionné correctement.\n"
+msgstr "dpkg: ... on dirais que tout a fonctionné correctement.\n"
 
 #. Huh ?
 #: main/help.c:472
