Disabled --command-fd, until further testing can be done.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-Fri Apr 20 13:02:23 CDT 2001  Adam Heath <doogie@debian.org>
+Fri Apr 20 13:42:12 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * main/main.c: Disabled --command-fd, until further testing can be done.
+
+Fri Apr 20 13:02:23 CDT 2001 Adam Heath <doogie@debian.org>
 
   * po/fr.po: Fix typo.
   * debian/changelog: Close additional bugs, from other already commited
