--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Fri Apr 20 22:59:39 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
+  * lib/database.c: initialize otherpriority as well in blankpackage()
+
+Fri Apr 20 22:59:39 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
   * lib/ehandle.c: make sure we never overflow errmsgbuf
 
 Fri Apr 20 14:59:14 CDT 2001 Adam Heath <doogie@debian.org>
