--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr 21 00:43:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * lib/parse.c: swap order for %.*s formats
+
 Fri Apr 20 22:59:39 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * lib/database.c: initialize otherpriority as well in blankpackage()
