--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr 20 18:18:20 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/database.c: initialize otherpriority with 0, not an int.
+
 Sat Apr 21 00:43:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * lib/parse.c: swap order for %.*s formats
