Add support for gcc attributes, printfformat, etc.  Be sure to run aclocal -I automake, and autoconf.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr 20 18:21:45 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * automake/dpkg.m4, configure.in: Add support for gcc attributes,
+    printfformat, etc.
+
 Fri Apr 20 18:18:20 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/database.c: initialize otherpriority with 0, not an int.
