--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr 20 19:02:46 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * configure.in: New option, --with-Werror, to convert all warnings
+    into errors.
+
 Fri Apr 20 18:21:45 CDT 2001 Adam Heath <doogie@debian.org>
 
   * automake/dpkg.m4, configure.in: Add support for gcc attributes,
