Fix varbufprintf call in modstatdb_note(found when printf format warnings were enabled).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr 20 19:05:44 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/dbmodify.c: Fix varbufprintf call in modstatdb_note(found when
+    printf format warnings were enabled).
+
 Fri Apr 20 19:02:46 CDT 2001 Adam Heath <doogie@debian.org>
 
   * configure.in: New option, --with-Werror, to convert all warnings
