Forget to keep this in sync with the last checkin.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr 20 19:37:00 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-source.pl: Import fix for broken dpkg-source.pl from
+    1.8.3 version.
+
 Fri Apr 20 19:05:44 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/dbmodify.c: Fix varbufprintf call in modstatdb_note(found when
