Remove spurious '%s' in Polish translation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr 20 19:46:38 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * po/pl.po: Remove spurious '%s' in Polish translation
+
 Fri Apr 20 19:37:00 CDT 2001 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-source.pl: Import fix for broken dpkg-source.pl from
