--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ dpkg (1.9.0) unstable; urgency=low
   * Update German translation, Closes: Bug#80529,#80532,#87581
   * Update French translation, Closes: Bug#65284,#85035,#87238
   * Update Japanese translation, Closes: Bug#93873
+  * Remove spurious '%s' in Polish translation, Closes: Bug#74814
   * Add French manpages, courtesy of Philippe Batailler
   * Ingore vim swapfiles in dpkg-source, Closes: Bug#81630
   * remove --import option from dpkg-statoverride, Closes: Bug#81358
@@ -69,7 +70,7 @@ dpkg (1.9.0) unstable; urgency=low
   * Fix regeps to extract Closes magic from a changelog so the #
     is really optional. Closes: Bug#94474
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Sat, 13 Jan 2001 08:52:11 -0500
 
 dpkg (1.8.3.1) unstable; urgency=low
 
